--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <link rel="stylesheet" href="index.css" />
     <link rel="stylesheet" href="reset.css" />
     <script src="app.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <h1>Todo List</h1>
+      <input type="text" id="todo-input" placeholder="새 할 일을 입력하세요" />
+      <button id="add-todo">추가</button>
+      <ul id="todo-list"></ul>
+    </div>
+  </body>
 </html>
